@@ -29,6 +29,7 @@
 #include "asterisk/cli.h"
 #include "asterisk/time.h"
 #include "include/res_pjsip_private.h"
+#include "asterisk/test.h"
 
 #define DEFAULT_LANGUAGE "en"
 #define DEFAULT_ENCODING "text/plain"
@@ -110,24 +111,26 @@ static void update_contact_status(const struct ast_sip_contact *contact,
 
 	status = find_or_create_contact_status(contact);
 	if (!status) {
-		return;
-	}
-
-	update = ast_sorcery_alloc(ast_sip_get_sorcery(), CONTACT_STATUS,
-		ast_sorcery_object_get_id(status));
-	if (!update) {
-		ast_log(LOG_ERROR, "Unable to create update ast_sip_contact_status for contact %s\n",
+		ast_log(LOG_ERROR, "Unable to find ast_sip_contact_status for contact %s\n",
 			contact->uri);
-		ao2_ref(status, -1);
 		return;
 	}
 
+	update = ast_sorcery_copy(ast_sip_get_sorcery(), status);
+	ao2_ref(status, -1);
+	if (!update) {
+		ast_log(LOG_ERROR, "Unable to copy ast_sip_contact_status for contact %s\n",
+			contact->uri);
+		return;
+	}
+
+	update->last_status = update->status;
 	update->status = value;
 
 	/* if the contact is available calculate the rtt as
 	   the diff between the last start time and "now" */
 	update->rtt = update->status == AVAILABLE ?
-		ast_tvdiff_us(ast_tvnow(), status->rtt_start) : 0;
+		ast_tvdiff_us(ast_tvnow(), update->rtt_start) : 0;
 
 	update->rtt_start = ast_tv(0, 0);
 
@@ -136,8 +139,15 @@ static void update_contact_status(const struct ast_sip_contact *contact,
 			contact->uri);
 	}
 
+	ast_test_suite_event_notify("AOR_CONTACT_QUALIFY_RESULT",
+		"Contact: %s\r\n"
+		"Status: %s\r\n"
+		"RTT: %ld",
+		contact->uri,
+		update->status == AVAILABLE ? "Available" : "Unavailable",
+		update->rtt);
+
 	ao2_ref(update, -1);
-	ao2_ref(status, -1);
 }
 
 /*!
@@ -152,15 +162,16 @@ static void init_start_time(const struct ast_sip_contact *contact)
 
 	status = find_or_create_contact_status(contact);
 	if (!status) {
+		ast_log(LOG_ERROR, "Unable to find ast_sip_contact_status for contact %s\n",
+			contact->uri);
 		return;
 	}
 
-	update = ast_sorcery_alloc(ast_sip_get_sorcery(), CONTACT_STATUS,
-		ast_sorcery_object_get_id(status));
+	update = ast_sorcery_copy(ast_sip_get_sorcery(), status);
+	ao2_ref(status, -1);
 	if (!update) {
-		ast_log(LOG_ERROR, "Unable to create update ast_sip_contact_status for contact %s\n",
+		ast_log(LOG_ERROR, "Unable to copy ast_sip_contact_status for contact %s\n",
 			contact->uri);
-		ao2_ref(status, -1);
 		return;
 	}
 
@@ -172,7 +183,6 @@ static void init_start_time(const struct ast_sip_contact *contact)
 	}
 
 	ao2_ref(update, -1);
-	ao2_ref(status, -1);
 }
 
 /*!
@@ -320,7 +330,7 @@ static int qualify_contact(struct ast_sip_endpoint *endpoint, struct ast_sip_con
 	init_start_time(contact);
 
 	ao2_ref(contact, +1);
-	if (ast_sip_send_request(tdata, NULL, endpoint_local, contact, qualify_contact_cb)
+	if (ast_sip_send_out_of_dialog_request(tdata, endpoint_local, contact->qualify_timeout * 1000, contact, qualify_contact_cb, NULL)
 		!= PJ_SUCCESS) {
 		ast_log(LOG_ERROR, "Unable to send request to qualify contact %s\n",
 			contact->uri);
@@ -923,6 +933,32 @@ static int sched_qualifies_cmp_fn(void *obj, void *arg, int flags)
 	return CMP_MATCH;
 }
 
+static int rtt_start_handler(const struct aco_option *opt,
+	struct ast_variable *var, void *obj)
+{
+	struct ast_sip_contact_status *status = obj;
+	long int sec, usec;
+
+	if (sscanf(var->value, "%ld.%06ld", &sec, &usec) != 2) {
+		return -1;
+	}
+
+	status->rtt_start = ast_tv(sec, usec);
+
+	return 0;
+}
+
+static int rtt_start_to_str(const void *obj, const intptr_t *args, char **buf)
+{
+	const struct ast_sip_contact_status *status = obj;
+
+	if (ast_asprintf(buf, "%ld.%06ld", status->rtt_start.tv_sec, status->rtt_start.tv_usec) == -1) {
+		return -1;
+	}
+
+	return 0;
+}
+
 int ast_sip_initialize_sorcery_qualify(void)
 {
 	struct ast_sorcery *sorcery = ast_sip_get_sorcery();
@@ -936,10 +972,14 @@ int ast_sip_initialize_sorcery_qualify(void)
 		return -1;
 	}
 
-	ast_sorcery_object_field_register_nodoc(sorcery, CONTACT_STATUS, "rtt", "0", OPT_UINT_T,
-					  1, FLDSET(struct ast_sip_contact_status, status));
-	ast_sorcery_object_field_register_nodoc(sorcery, CONTACT_STATUS, "rtt", "0", OPT_UINT_T,
-					  1, FLDSET(struct ast_sip_contact_status, rtt));
+	ast_sorcery_object_field_register_nodoc(sorcery, CONTACT_STATUS, "last_status",
+		"0", OPT_UINT_T, 1, FLDSET(struct ast_sip_contact_status, last_status));
+	ast_sorcery_object_field_register_nodoc(sorcery, CONTACT_STATUS, "status",
+		"0", OPT_UINT_T, 1, FLDSET(struct ast_sip_contact_status, status));
+	ast_sorcery_object_field_register_custom_nodoc(sorcery, CONTACT_STATUS, "rtt_start",
+		"0.0", rtt_start_handler, rtt_start_to_str, NULL, 0, 0);
+	ast_sorcery_object_field_register_nodoc(sorcery, CONTACT_STATUS, "rtt",
+		"0", OPT_UINT_T, 1, FLDSET(struct ast_sip_contact_status, rtt));
 
 	return 0;
 }
@@ -951,6 +991,7 @@ static int qualify_and_schedule_cb(void *obj, void *arg, int flags)
 	int initial_interval;
 
 	contact->qualify_frequency = aor->qualify_frequency;
+	contact->qualify_timeout = aor->qualify_timeout;
 	contact->authenticate_qualify = aor->authenticate_qualify;
 
 	/* Delay initial qualification by a random fraction of the specified interval */
